--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "Serverless Learning Environment",
   "main": "src/app.js",
   "scripts": {
+    "audit-dependencies": "npm audit --audit-level high",
     "build": "tsc -pretty -p .",
     "deploy": "npm run build && sls deploy --force",
     "start-offline": "npm run build && serverless offline start",
     "start-debug": "npm run build && SLS_DEBUG=* node --inspect ./node_modules/.bin/serverless offline -s dev",
     "test": "clear && npm run test:tslint && npm run test:mdlint",
     "test:tslint": "tslint --project tsconfig.json",
-    "test:mdlint": "npx remark . .github/"
+    "test:mdlint": "./node_modules/.bin/remark . .github/"
   },
   "repository": {
     "type": "git",
@@ -47,7 +48,6 @@
     "@types/getenv": "^0.7.0",
     "@types/joi": "^14.3.1",
     "@types/node": "^11.9.4",
-    "npx": "^10.2.0",
     "remark-cli": "^6.0.1",
     "remark-lint": "^6.0.4",
     "remark-preset-lint-recommended": "^3.0.2",
